--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -89,7 +89,7 @@
 
   font-weight: 900;
 
-  src: url('..fonts/TarabaComfortaa-ExtraBold.woff2') format('woff2'),
+  src: url('../fonts/TarabaComfortaa-ExtraBold.woff2') format('woff2'),
 
   /* Chrome 36+, Opera 23+, Firefox 39+ */
 }
@@ -624,6 +624,89 @@ video {
   position: fixed;
 }
 
-.font-heading {
+.grid {
+  display: grid;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.bg-trb-grey4 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
+}
+
+.font-heading-bold {
+  font-family: "Taraba Comfortaa", system-ui, sans-serif;
+}
+
+.font-sans {
+  font-family: Roboto, system-ui, sans-serif;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-trb-black2 {
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 18% / var(--tw-text-opacity));
+}
+
+.text-trb-black3 {
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 40% / var(--tw-text-opacity));
+}
+
+.text-trb-orange3 {
+  --tw-text-opacity: 1;
+  color: hsl(31 100% 61% / var(--tw-text-opacity));
+}
+
+.button {
+  display: inline-flex;
+  min-height: 44px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  padding: 1rem;
   font-family: Comfortaa, system-ui, sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.button--full {
+  --tw-bg-opacity: 1;
+  background-color: hsl(31 100% 61% / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 98% / var(--tw-text-opacity));
+  --tw-shadow: 0 10px 20px rgba(143,60,0,0.25),inset -2px -2px 10px hsl(28,100%,50%);
+  --tw-shadow-colored: 0 10px 20px var(--tw-shadow-color), inset -2px -2px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.button--outline {
+  background-color: transparent;
+  --tw-text-opacity: 1;
+  color: hsl(31 100% 61% / var(--tw-text-opacity));
+  outline-style: solid;
+  outline-width: 2px;
+  outline-color: currentColor;
 }
