--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -516,13 +516,6 @@ video {
   display: none;
 }
 
-:root,
-    :root.light {
-  --bg-color: 0 0% 98%;
-  --txt-color: 0 0% 18%;
-  --para-txt-color: 0 0% 40%;
-}
-
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -623,6 +616,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .static {
   position: static;
 }
@@ -631,8 +658,36 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .grid {
@@ -647,12 +702,26 @@ video {
   height: 100vh;
 }
 
+.min-h-\[44px\] {
+  min-height: 44px;
+}
+
 .w-\[87px\] {
   width: 87px;
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .justify-between {
@@ -663,9 +732,9 @@ video {
   gap: 1rem;
 }
 
-.bg-bg-color {
+.bg-trb-grey4 {
   --tw-bg-opacity: 1;
-  background-color: hsl(var(--bg-color) / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
 }
 
 .p-6 {
@@ -690,11 +759,6 @@ video {
   line-height: 1;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -709,9 +773,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-para-txt-color {
+.text-trb-black2 {
   --tw-text-opacity: 1;
-  color: hsl(var(--para-txt-color) / var(--tw-text-opacity));
+  color: hsl(0 0% 18% / var(--tw-text-opacity));
 }
 
 .text-trb-black3 {
@@ -724,14 +788,43 @@ video {
   color: hsl(31 100% 61% / var(--tw-text-opacity));
 }
 
-.text-txt-color {
-  --tw-text-opacity: 1;
-  color: hsl(var(--txt-color) / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
+
+.shadow-\[0_1px_16px_rgba\(255\2c 120\2c 0\2c 0\.2\)\] {
+  --tw-shadow: 0 1px 16px rgba(255,120,0,0.2);
+  --tw-shadow-colored: 0 1px 16px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.transition-\[right\] {
+  transition-property: right;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+/* @layer base {
+    :root,
+    :root.light {
+        --bg-color: 0 0% 98%;
+        --txt-color: 0 0% 18%;
+        --para-txt-color: 0 0% 40%;
+    }
+    :root.dark {
+        --bg-color: 0 0% 18%;
+        --txt-color: 0 0% 98%;
+        --para-txt-color: 0 0% 90%;
+    }
+} */
 
 .button {
   display: inline-flex;
@@ -746,10 +839,15 @@ video {
   line-height: 1.25rem;
 }
 
-/* .button--full {
-    @apply text-trb-grey4 bg-trb-orange3 shadow-[0_10px_20px_rgba(143,60,0,0.25),
-    inset_-2px_-2px_10px_hsl(28,100%,50%)];
-}  */
+.button--full {
+  --tw-bg-opacity: 1;
+  background-color: hsl(31 100% 61% / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 98% / var(--tw-text-opacity));
+  --tw-shadow: 0 10px 20px rgba(143,60,0,0.25),inset -2px -2px 10px hsl(28,100%,50%);
+  --tw-shadow-colored: 0 10px 20px var(--tw-shadow-color), inset -2px -2px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 
 .button--outline {
   background-color: transparent;
@@ -763,7 +861,95 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.peer.peer ~ .peer-\[\.peer\]\:text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+:is(.dark .dark\:bg-trb-black2) {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 18% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:text-trb-grey3) {
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 90% / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-trb-grey4) {
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 98% / var(--tw-text-opacity));
+}
+
+@media not all and (min-width: 768px) {
+  .peer.peer ~ .peer-\[\.peer\]\:max-md\:fixed {
+    position: fixed;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:max-md\:-right-full {
+    right: -100%;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:max-md\:h-0 {
+    height: 0px;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:max-md\:w-0 {
+    width: 0px;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:max-md\:p-0 {
+    padding: 0px;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:right-0 {
+    right: 0px;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:top-0 {
+    top: 0px;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:z-10 {
+    z-index: 10;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:h-screen {
+    height: 100vh;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:w-\[187px\] {
+    width: 187px;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:gap-7 {
+    gap: 1.75rem;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .peer[aria-expanded="true"] ~ .peer-aria-expanded\:max-md\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:right-6 {
+    right: 1.5rem;
+  }
+
+  .md\:top-auto {
+    top: auto;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:w-auto {
     width: auto;
   }
@@ -782,5 +968,32 @@ video {
 
   .md\:p-0 {
     padding: 0px;
+  }
+
+  .md\:shadow-\[0_2px_10px_rgba\(45\2c 45\2c 45\2c 0\.1\)\] {
+    --tw-shadow: 0 2px 10px rgba(45,45,45,0.1);
+    --tw-shadow-colored: 0 2px 10px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:md\:mr-12 {
+    margin-right: 3rem;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .peer.peer ~ .peer-\[\.peer\]\:xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
