inner pages layout

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -519,6 +519,8 @@ video {
 .button {
   display: inline-flex;
   min-height: 44px;
+  width: 100%;
+  max-width: 198px;
   cursor: pointer;
   align-items: center;
   justify-content: center;
@@ -744,6 +746,14 @@ video {
   margin-right: auto;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -776,8 +786,8 @@ video {
   width: 100%;
 }
 
-.max-w-\[198px\] {
-  max-width: 198px;
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .max-w-\[217px\] {
@@ -790,6 +800,14 @@ video {
 
 .max-w-\[420px\] {
   max-width: 420px;
+}
+
+.max-w-\[45ch\] {
+  max-width: 45ch;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .max-w-screen-xl {
@@ -863,6 +881,11 @@ video {
 
 .font-heading-bold {
   font-family: "Taraba Comfortaa", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -986,6 +1009,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.hover\:text-trb-orange1:hover {
+  --tw-text-opacity: 1;
+  color: hsl(28 100% 50% / var(--tw-text-opacity));
+}
+
 .peer.hamburger ~ .peer-\[\.hamburger\]\:text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1019,6 +1047,11 @@ video {
 :is(.dark .dark\:invert) {
   --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+:is(.dark .dark\:hover\:text-trb-orange3:hover) {
+  --tw-text-opacity: 1;
+  color: hsl(31 100% 61% / var(--tw-text-opacity));
 }
 
 @media not all and (min-width: 768px) {
@@ -1154,12 +1187,26 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:max-w-7xl {
+    max-width: 80rem;
+  }
+
   .xl\:max-w-\[63ch\] {
     max-width: 63ch;
   }
 
   .xl\:max-w-none {
     max-width: none;
+  }
+
+  .xl\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .xl\:text-7xl {
@@ -1180,6 +1227,10 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+}
+
+.\[\&\>\*\+\*\]\:mt-2>*+* {
+  margin-top: 0.5rem;
 }
 
 .\[\&\>\*\+\*\]\:mt-6>*+* {
