--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -563,6 +563,28 @@ video {
   outline-color: hsl(28, 100%, 50%);
 }
 
+.input {
+  width: 100%;
+  border-radius: 1rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 67% / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
+  padding: 1rem;
+  font-family: Comfortaa, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 1280px) {
+  .input {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -770,12 +792,20 @@ video {
   display: none;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-screen {
   height: 100vh;
 }
 
 .min-h-\[44px\] {
   min-height: 44px;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-\[87px\] {
@@ -820,6 +850,10 @@ video {
           appearance: none;
 }
 
+.grid-cols-\[auto_1fr\] {
+  grid-template-columns: auto 1fr;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -830,6 +864,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-4 {
@@ -848,9 +886,31 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-trb-black3 {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 40% / var(--tw-border-opacity));
+}
+
 .bg-trb-grey4 {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
+}
+
+.bg-trb-orange4 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(31 100% 80% / var(--tw-bg-opacity));
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 
 .p-6 {
@@ -1004,6 +1064,11 @@ video {
   mix-blend-mode: hue;
 }
 
+.checked\:bg-trb-orange1:checked {
+  --tw-bg-opacity: 1;
+  background-color: hsl(28 100% 50% / var(--tw-bg-opacity));
+}
+
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1019,9 +1084,19 @@ video {
   line-height: 1.75rem;
 }
 
+:is(.dark .dark\:border-trb-grey3) {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 90% / var(--tw-border-opacity));
+}
+
 :is(.dark .dark\:bg-trb-black2) {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 18% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-trb-grey0) {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 31% / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:text-trb-grey3) {
@@ -1049,9 +1124,15 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-:is(.dark .dark\:hover\:text-trb-orange3:hover) {
-  --tw-text-opacity: 1;
-  color: hsl(31 100% 61% / var(--tw-text-opacity));
+:is(.dark .dark\:after\:bg-trb-orange1)::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: hsl(28 100% 50% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:after\:mix-blend-hue)::after {
+  content: var(--tw-content);
+  mix-blend-mode: hue;
 }
 
 @media not all and (min-width: 768px) {
