--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -807,6 +807,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .inline {
   display: inline;
 }
@@ -851,6 +855,10 @@ video {
   width: 100%;
 }
 
+.min-w-\[14rem\] {
+  min-width: 14rem;
+}
+
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -877,6 +885,18 @@ video {
 
 .max-w-screen-xl {
   max-width: 1280px;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.basis-56 {
+  flex-basis: 14rem;
+}
+
+.snap-x {
+  scroll-snap-type: x var(--tw-scroll-snap-strictness);
 }
 
 .appearance-none {
@@ -933,6 +953,10 @@ video {
   gap: 1rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -953,6 +977,10 @@ video {
   align-self: stretch;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -965,9 +993,18 @@ video {
   border-width: 2px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-trb-black3 {
   --tw-border-opacity: 1;
   border-color: hsl(0 0% 40% / var(--tw-border-opacity));
+}
+
+.border-trb-black4 {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 60% / var(--tw-border-opacity));
 }
 
 .bg-trb-grey2 {
@@ -998,8 +1035,31 @@ video {
   --tw-bg-opacity: 0.2;
 }
 
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-trb-orange4 {
+  --tw-gradient-from: hsl(31, 100%, 80%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(31 100% 80% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-white {
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
 .p-6 {
   padding: 1.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-\[2\.5\%\] {
@@ -1021,8 +1081,16 @@ video {
   padding-bottom: 3rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-8 {
@@ -1079,6 +1147,10 @@ video {
 
 .font-medium {
   font-weight: 500;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .leading-normal {
@@ -1464,6 +1536,10 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:justify-center {
+    justify-content: center;
+  }
+
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1481,6 +1557,10 @@ video {
 
   .xl\:max-w-none {
     max-width: none;
+  }
+
+  .xl\:gap-4 {
+    gap: 1rem;
   }
 
   .xl\:py-20 {
