--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -863,6 +863,10 @@ video {
   height: 100vh;
 }
 
+.min-h-\[188px\] {
+  min-height: 188px;
+}
+
 .min-h-\[44px\] {
   min-height: 44px;
 }
@@ -889,6 +893,10 @@ video {
 
 .max-w-\[217px\] {
   max-width: 217px;
+}
+
+.max-w-\[226px\] {
+  max-width: 226px;
 }
 
 .max-w-\[344px\] {
@@ -939,6 +947,10 @@ video {
 
 .grid-cols-\[repeat\(4\2c 22\.68px\)\] {
   grid-template-columns: repeat(4,22.68px);
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -997,6 +1009,10 @@ video {
   gap: 2rem;
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
 .self-center {
   align-self: center;
 }
@@ -1015,6 +1031,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .border-2 {
@@ -1081,6 +1101,10 @@ video {
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
 }
 
+.fill-current {
+  fill: currentColor;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -1102,6 +1126,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-8 {
@@ -1157,6 +1186,11 @@ video {
 
 .text-\[1\.7rem\] {
   font-size: 1.7rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-sm {
@@ -1230,6 +1264,17 @@ video {
   --tw-shadow: 0 1px 16px rgba(255,120,0,0.2);
   --tw-shadow-colored: 0 1px 16px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-trb-orange0\/20 {
+  --tw-shadow-color: hsl(25 100% 28% / 0.2);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline {
@@ -1570,6 +1615,10 @@ video {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:justify-center {
