--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -957,6 +957,10 @@ video {
   flex-direction: column;
 }
 
+.place-items-center {
+  place-items: center;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -1053,6 +1057,11 @@ video {
 .border-trb-black4 {
   --tw-border-opacity: 1;
   border-color: hsl(0 0% 60% / var(--tw-border-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-trb-grey2 {
@@ -1690,6 +1699,12 @@ video {
   .peer.hamburger ~ .peer-\[\.hamburger\]\:xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:basis-80 {
+    flex-basis: 20rem;
   }
 }
 
