--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -883,8 +883,8 @@ video {
   width: 100%;
 }
 
-.min-w-\[14rem\] {
-  min-width: 14rem;
+.min-w-\[226px\] {
+  min-width: 226px;
 }
 
 .max-w-4xl {
@@ -911,6 +911,10 @@ video {
   max-width: 45ch;
 }
 
+.max-w-\[976px\] {
+  max-width: 976px;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
@@ -925,10 +929,6 @@ video {
 
 .basis-56 {
   flex-basis: 14rem;
-}
-
-.snap-x {
-  scroll-snap-type: x var(--tw-scroll-snap-strictness);
 }
 
 .appearance-none {
@@ -1029,6 +1029,10 @@ video {
   overflow-x: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1057,11 +1061,6 @@ video {
 .border-trb-black4 {
   --tw-border-opacity: 1;
   border-color: hsl(0 0% 60% / var(--tw-border-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-trb-grey2 {
@@ -1103,6 +1102,12 @@ video {
 .from-trb-orange4 {
   --tw-gradient-from: hsl(31, 100%, 80%) var(--tw-gradient-from-position);
   --tw-gradient-to: hsl(31 100% 80% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-trb-orange5 {
+  --tw-gradient-from: hsl(18, 100%, 88%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(18 100% 88% / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1286,10 +1291,6 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.outline {
-  outline-style: solid;
-}
-
 .transition-\[right\] {
   transition-property: right;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1313,6 +1314,80 @@ video {
         --para-txt-color: 0 0% 90%;
     }
 }  */
+
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:-top-10::before {
+  content: var(--tw-content);
+  top: -2.5rem;
+}
+
+.before\:-z-10::before {
+  content: var(--tw-content);
+  z-index: -10;
+}
+
+.before\:justify-self-center::before {
+  content: var(--tw-content);
+  justify-self: center;
+}
+
+.before\:rounded-2xl::before {
+  content: var(--tw-content);
+  border-radius: 1rem;
+}
+
+.before\:bg-gradient-to-b::before {
+  content: var(--tw-content);
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.before\:from-trb-orange4::before {
+  content: var(--tw-content);
+  --tw-gradient-from: hsl(31, 100%, 80%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(31 100% 80% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:to-white::before {
+  content: var(--tw-content);
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
+.before\:p-4::before {
+  content: var(--tw-content);
+  padding: 1rem;
+}
+
+.before\:text-center::before {
+  content: var(--tw-content);
+  text-align: center;
+}
+
+.before\:font-heading::before {
+  content: var(--tw-content);
+  font-family: Comfortaa, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.before\:text-base::before {
+  content: var(--tw-content);
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.before\:text-trb-grey0::before {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 31% / var(--tw-text-opacity));
+}
+
+.before\:content-\[\'Most_popular_plan\'\]::before {
+  --tw-content: 'Most popular plan';
+  content: var(--tw-content);
+}
 
 .after\:absolute::after {
   content: var(--tw-content);
@@ -1502,6 +1577,12 @@ video {
   }
 }
 
+@media (min-width: 640px) {
+  .sm\:max-w-\[45ch\] {
+    max-width: 45ch;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:right-6 {
     right: 1.5rem;
@@ -1634,6 +1715,11 @@ video {
     justify-content: center;
   }
 
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1703,8 +1789,26 @@ video {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:w-\[1295px\] {
+    width: 1295px;
+  }
+
+  .\32xl\:max-w-\[1295px\] {
+    max-width: 1295px;
+  }
+
   .\32xl\:basis-80 {
     flex-basis: 20rem;
+  }
+
+  .\32xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\32xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1714,6 +1818,10 @@ video {
 
 .\[\&\>\*\+\*\]\:mt-3>*+* {
   margin-top: 0.75rem;
+}
+
+.\[\&\>\*\+\*\]\:mt-4>*+* {
+  margin-top: 1rem;
 }
 
 .\[\&\>\*\+\*\]\:mt-6>*+* {
